<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ioniq_electric_vehicle_launch</name>
  <version>0.1.0</version>
  <description>The ioniq_electric_vehicle_launch package</description>
  <maintainer email="dutjdgns@gmail.com">Seonghun Yeo</maintainer>
  <license>Apache 2.0 License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>ioniq_electric_driver</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
